src/validation/snapshots/rusty__validation__variable__variable_validator_tests__validate_empty_struct_declaration.snap
---
source: src/validation/variable.rs
expression: diagnostics
---
error[E028]: Variable block is empty
  ┌─ <internal>:2:14
  │
2 │         TYPE the_struct : STRUCT END_STRUCT END_TYPE
  │              ^^^^^^^^^^ Variable block is empty

error[E028]: Variable block is empty
  ┌─ <internal>:6:29
  │  
6 │                   my_struct : STRUCT
  │ ╭─────────────────────────────^
7 │ │                 END_STRUCT
  │ ╰──────────────────────────^ Variable block is empty
